--- a/app/globals.css
+++ b/app/globals.css
@@ -449,14 +449,14 @@ body {
 }
 
 .shad-submit-btn {
-  background-color: var(--brand);
+  background-color:#ef4444; 
   border-radius: 9999px;
   font-size: 14px;
   line-height: 20px;
   font-weight: 500;
   transition: all 0.2s;
 }
-.shad-submit-btn:hover { background-color: var(--brand-100); }
+.shad-submit-btn:hover { background-color: #ef4444; }
 
 .shad-otp {
   display: flex;
@@ -477,7 +477,7 @@ body {
   box-shadow: 0 1px 2px rgba(0,0,0,0.05);
   width: 4rem;
   height: 4rem;
-  color: var(--brand-100);
+  color: #ef4444;
 }
 
 .shad-sheet { padding-top: 0; }
